--- a/public/stylesheets/metadata-extractor.css
+++ b/public/stylesheets/metadata-extractor.css
@@ -1,15 +1,12 @@
-/* Define the "red-text" class */
-.red-text {
-    color: red;
-  }
-  
-  /* Define the "gray-background" class */
-  .gray-background {
-    background-color: gray;
-  }
-  
 
 .dropdown-placeholder {
     color: lightgrey;
     font-style: italic;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
